laborations/lab1/testsuite/bad/bad038.cc
int foo() {
	if (4)
}
